--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "autojoy",
   "version": "1.0.0",
   "description": "Automatically update emulators and games input settings based on what's connected to your computer!",
-  "main": "index.js",
+  "entry": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
-  "module": true,
+  "type": "module",
   "author": "Jhonny Michel <jhonnymichel@outlook.com>",
   "license": "MIT",
   "dependencies": {
     "@kmamal/sdl": "^0.10.2",
-    "node-direct-input": "^1.0.0",
-    "usb": "^2.11.0",
-    "xinput": "^0.5.0",
     "xinput-ffi": "^4.0.0",
     "yaml": "^2.4.0"
+  },
+  "devDependencies": {
+    "@electron/packager": "^18.1.3",
+    "electron": "^29.1.1"
   }
 }
