--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "entry": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "build": {
+    "appId": "com.jhonnymichel.autojoy"
   },
   "type": "module",
   "author": "Jhonny Michel <jhonnymichel@outlook.com>",
@@ -16,7 +22,7 @@
     "yaml": "^2.4.0"
   },
   "devDependencies": {
-    "@electron/packager": "^18.1.3",
-    "electron": "^29.1.1"
+    "electron": "^29.1.1",
+    "electron-builder": "^24.13.3"
   }
 }
