supporting xinput guitars on dolphin

--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -93,3 +93,51 @@ Nunchuk/Tilt/Backward = @(`Thumb L`+`Right Y-`)
 Nunchuk/Tilt/Left = @(`Thumb L`+`Right X-`)
 Nunchuk/Tilt/Right = @(`Thumb L`+`Right X+`)
 Source = 1
+[GUITAR]
+Device = XInput/0/Device
+IR/Up = `Cursor Y-`
+IR/Down = `Cursor Y+`
+IR/Left = `Cursor X-`
+IR/Right = `Cursor X+`
+Tilt/Modifier/Range = 50.
+Shake/X = `Click 2`
+Shake/Y = `Click 2`
+Shake/Z = `Click 2`
+Extension = Guitar
+Nunchuk/Buttons/C = LCONTROL
+Nunchuk/Buttons/Z = LSHIFT
+Nunchuk/Stick/Up = W
+Nunchuk/Stick/Down = S
+Nunchuk/Stick/Left = A
+Nunchuk/Stick/Right = D
+Nunchuk/Stick/Modifier/Range = 50.
+Nunchuk/Stick/Calibration = 100.00 141.42 100.00 141.42 100.00 141.42 100.00 141.42
+Nunchuk/Tilt/Modifier/Range = 50.
+Nunchuk/Shake/X = `Click 2`
+Nunchuk/Shake/Y = `Click 2`
+Nunchuk/Shake/Z = `Click 2`
+Classic/Left Stick/Modifier/Range = 50.
+Classic/Right Stick/Modifier/Range = 50.
+Guitar/Stick/Modifier/Range = 50.
+Drums/Stick/Modifier/Range = 50.
+Turntable/Stick/Modifier/Range = 50.
+uDraw/Stylus/Modifier/Range = 50.
+Drawsome/Stylus/Modifier/Range = 50.
+Source = 1
+Swing/Up = `Right Y+`
+Guitar/Frets/Green = `Button A`
+Guitar/Frets/Red = `Button B`
+Guitar/Frets/Yellow = `Button Y`
+Guitar/Frets/Blue = `Button X`
+Guitar/Frets/Orange = `Shoulder L`
+Guitar/Strum/Up = `Pad N`
+Guitar/Strum/Down = `Pad S`
+Guitar/Buttons/- = Back
+Guitar/Buttons/+ = Start
+Guitar/Stick/Up = `Pad N`
+Guitar/Whammy/Bar = if(`Right X-` > 0, (0.5-((`Right X-`) * 0.5)), ((`Right X+`) * 0.5) + 0.5)
+Guitar/Stick/Down = `Pad S`
+Guitar/Stick/Left = `Pad W`
+Guitar/Stick/Right = `Pad E`
+Buttons/A = `Button A`
+Buttons/B = `Button B`
