DSL guitar support for dolphin

--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -125,6 +125,7 @@ uDraw/Stylus/Modifier/Range = 50.
 Drawsome/Stylus/Modifier/Range = 50.
 Source = 1
 Swing/Up = `Right Y+`
+Swing/Dead Zone = 40.
 Guitar/Frets/Green = `Button A`
 Guitar/Frets/Red = `Button B`
 Guitar/Frets/Yellow = `Button Y`
