supporting rock band drums with pro cymbals

--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -142,3 +142,64 @@ Guitar/Stick/Left = `Pad W`
 Guitar/Stick/Right = `Pad E`
 Buttons/A = `Button A`
 Buttons/B = `Button B`
+[DRUM_KIT]
+Device = XInput/0/Drum Kit
+Buttons/A = `Button A`&`Right Y-`&`Thumb R`
+Buttons/B = `Button B`&`Left X+`&`Thumb R`
+IR/Up = `Cursor Y-`
+IR/Down = `Cursor Y+`
+IR/Left = `Cursor X-`
+IR/Right = `Cursor X+`
+Tilt/Modifier/Range = 50.
+Shake/X = `Click 2`
+Shake/Y = `Click 2`
+Shake/Z = `Click 2`
+Extension = Drums
+Nunchuk/Buttons/C = LCONTROL
+Nunchuk/Buttons/Z = LSHIFT
+Nunchuk/Stick/Up = W
+Nunchuk/Stick/Down = S
+Nunchuk/Stick/Left = A
+Nunchuk/Stick/Right = D
+Nunchuk/Stick/Modifier/Range = 50.
+Nunchuk/Stick/Calibration = 100.00 141.42 100.00 141.42 100.00 141.42 100.00 141.42
+Nunchuk/Tilt/Modifier/Range = 50.
+Nunchuk/Shake/X = `Click 2`
+Nunchuk/Shake/Y = `Click 2`
+Nunchuk/Shake/Z = `Click 2`
+Classic/Left Stick/Modifier/Range = 50.
+Classic/Right Stick/Modifier/Range = 50.
+Guitar/Stick/Modifier/Range = 50.
+Turntable/Stick/Modifier/Range = 50.
+uDraw/Stylus/Modifier/Range = 50.
+Drawsome/Stylus/Modifier/Range = 50.
+Source = 1
+Swing/Dead Zone = 40.
+Swing/Up = `Left X+`
+Guitar/Frets/Green = `Button A`
+Guitar/Frets/Red = `Button B`
+Guitar/Frets/Yellow = `Button Y`
+Guitar/Frets/Blue = `Button X`
+Guitar/Frets/Orange = `Shoulder L`
+Guitar/Strum/Up = `Pad N`
+Guitar/Strum/Down = `Pad S`
+Guitar/Buttons/- = Back
+Guitar/Buttons/+ = Start
+Guitar/Stick/Up = `Pad N`
+Guitar/Stick/Down = `Pad S`
+Guitar/Stick/Left = `Pad W`
+Guitar/Stick/Right = `Pad E`
+Guitar/Whammy/Bar = if(`Left Y+` > 0, (0.5-((`Left Y+`) * 0.5)), ((`Left Y-`) * 0.5) + 0.5)
+Drums/Pads/Red = `Button B`&`Left X+`&`Thumb R`
+Drums/Pads/Yellow = `Button Y`&`Left Y-`&`Thumb R`
+Drums/Pads/Blue = `Button X`&`Right X+`&`Thumb R`
+Drums/Pads/Orange = `Button A`&`Right Y-`&`Thumb R`
+Drums/Pads/Bass = `Shoulder L`
+Drums/Pads/Green = `Button A`&`Right Y-`&`Shoulder R`
+Drums/Buttons/- = Back
+Drums/Buttons/+ = Start
+Drums/Stick/Up = `Pad N`
+Drums/Stick/Down = `Pad S`
+Drums/Stick/Left = `Pad W`
+Drums/Stick/Right = `Pad E`
+Buttons/Home = Guide
