tweaking drums settings in dolphin

--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -144,8 +144,8 @@ Buttons/A = `Button A`
 Buttons/B = `Button B`
 [DRUM_KIT]
 Device = XInput/0/Drum Kit
-Buttons/A = `Button A`&`Right Y-`&`Thumb R`
-Buttons/B = `Button B`&`Left X+`&`Thumb R`
+Buttons/A = `Button A`&`Thumb R`
+Buttons/B = `Button B`&`Thumb R`
 IR/Up = `Cursor Y-`
 IR/Down = `Cursor Y+`
 IR/Left = `Cursor X-`
@@ -174,28 +174,12 @@ Turntable/Stick/Modifier/Range = 50.
 uDraw/Stylus/Modifier/Range = 50.
 Drawsome/Stylus/Modifier/Range = 50.
 Source = 1
-Swing/Dead Zone = 40.
-Swing/Up = `Left X+`
-Guitar/Frets/Green = `Button A`
-Guitar/Frets/Red = `Button B`
-Guitar/Frets/Yellow = `Button Y`
-Guitar/Frets/Blue = `Button X`
-Guitar/Frets/Orange = `Shoulder L`
-Guitar/Strum/Up = `Pad N`
-Guitar/Strum/Down = `Pad S`
-Guitar/Buttons/- = Back
-Guitar/Buttons/+ = Start
-Guitar/Stick/Up = `Pad N`
-Guitar/Stick/Down = `Pad S`
-Guitar/Stick/Left = `Pad W`
-Guitar/Stick/Right = `Pad E`
-Guitar/Whammy/Bar = if(`Left Y+` > 0, (0.5-((`Left Y+`) * 0.5)), ((`Left Y-`) * 0.5) + 0.5)
-Drums/Pads/Red = `Button B`&`Left X+`&`Thumb R`
-Drums/Pads/Yellow = `Button Y`&`Left Y-`&`Thumb R`
-Drums/Pads/Blue = `Button X`&`Right X+`&`Thumb R`
-Drums/Pads/Orange = `Button A`&`Right Y-`&`Thumb R`
+Drums/Pads/Red = `Button B`&`Thumb R`
+Drums/Pads/Yellow = `Button Y`&`Thumb R`
+Drums/Pads/Blue = `Button X`&`Thumb R`
+Drums/Pads/Orange = `Button A`&`Shoulder R`
 Drums/Pads/Bass = `Shoulder L`
-Drums/Pads/Green = `Button A`&`Right Y-`&`Shoulder R`
+Drums/Pads/Green = `Button A`&`Thumb R`
 Drums/Buttons/- = Back
 Drums/Buttons/+ = Start
 Drums/Stick/Up = `Pad N`
