--- a/package.json
+++ b/package.json
@@ -8,23 +8,30 @@
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
+    "install": "node-gyp rebuild",
     "postinstall": "electron-builder install-app-deps"
   },
   "build": {
-    "appId": "com.jhonnymichel.autojoy"
+    "appId": "com.jhonnymichel.autojoy",
+    "directories": {
+      "buildResources": "electron-builder"
+    }
   },
   "type": "module",
   "author": "Jhonny Michel <jhonnymichel@outlook.com>",
   "license": "MIT",
   "dependencies": {
     "@kmamal/sdl": "^0.10.7",
+    "bindings": "^1.5.0",
     "fast-xml-parser": "^4.5.1",
     "ini": "^5.0.0",
+    "node-addon-api": "^8.3.0",
     "xinput-ffi": "^4.0.0",
     "yaml": "^2.4.0"
   },
   "devDependencies": {
     "electron": "^29.1.1",
-    "electron-builder": "^24.13.3"
+    "electron-builder": "^24.13.3",
+    "node-gyp": "^11.1.0"
   }
 }
