--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -236,3 +236,93 @@ Drums/Stick/Down = `Pad S`
 Drums/Stick/Left = `Pad W`
 Drums/Stick/Right = `Pad E`
 Buttons/Home = Guide
+[WII_ROCKBAND_DRUM_KIT]
+Device = SDL/0/Harmonix Drum Controller for Nintendo Wii
+Buttons/A = `Button 10`&`Button 1`
+Buttons/B = `Button 10`&`Button 2`
+Buttons/Home = `Button 12`
+IR/Vertical Offset = 12.
+IR/Total Yaw = 19.
+IR/Total Pitch = 22.
+IR/Auto-Hide = True
+IR/Calibration = 100.00 101.96 108.24 112.67 116.44 114.62 108.11 101.96 100.00 101.96 108.11 113.10 115.81 113.90 108.24 101.96 100.00 101.96 108.24 114.93 115.13 115.19 108.24 101.96 100.00 101.96 108.13 112.88 112.20 110.97 108.24 101.96
+Tilt/Modifier/Range = 50.
+IMUAccelerometer/Up = `Accel Up`
+IMUAccelerometer/Down = `Accel Down`
+IMUAccelerometer/Left = `Accel Left`
+IMUAccelerometer/Right = `Accel Right`
+IMUAccelerometer/Forward = `Accel Forward`
+IMUAccelerometer/Backward = `Accel Backward`
+IMUGyroscope/Pitch Up = `Gyro Pitch Up`
+IMUGyroscope/Pitch Down = `Gyro Pitch Down`
+IMUGyroscope/Roll Left = `Gyro Roll Left`
+IMUGyroscope/Roll Right = `Gyro Roll Right`
+IMUGyroscope/Yaw Left = `Gyro Yaw Left`
+IMUGyroscope/Yaw Right = `Gyro Yaw Right`
+IMUIR/Enabled = False
+Extension = Drums
+Nunchuk/Buttons/C = `Shoulder R`
+Nunchuk/Buttons/Z = `Trigger R`
+Nunchuk/Stick/Up = `Left Y+`
+Nunchuk/Stick/Down = `Left Y-`
+Nunchuk/Stick/Left = `Left X-`
+Nunchuk/Stick/Right = `Left X+`
+Nunchuk/Stick/Modifier/Range = 50.
+Nunchuk/Stick/Calibration = 100.00 101.96 107.70 111.02 112.30 107.98 106.91 101.96 100.00 101.96 108.24 113.14 114.55 111.79 108.24 101.96 100.00 101.96 108.24 113.60 114.92 113.33 108.24 101.96 100.00 101.96 108.24 110.60 109.10 108.88 108.24 101.96
+Nunchuk/Tilt/Modifier/Range = 50.
+Nunchuk/Shake/X = `Trigger L`
+Nunchuk/Shake/Y = `Trigger L`
+Nunchuk/Shake/Z = `Trigger L`
+Classic/Buttons/A = `Button B`
+Classic/Buttons/B = `Button A`
+Classic/Buttons/X = `Button Y`
+Classic/Buttons/Y = `Button X`
+Classic/Buttons/ZL = `Shoulder L`
+Classic/Buttons/ZR = `Shoulder L`
+Classic/Buttons/- = SELECT
+Classic/Buttons/+ = START
+Classic/Left Stick/Up = `Left Y+`
+Classic/Left Stick/Down = `Left Y-`
+Classic/Left Stick/Left = `Left X-`
+Classic/Left Stick/Right = `Left X+`
+Classic/Left Stick/Modifier/Range = 50.
+Classic/Left Stick/Calibration = 100.00 101.96 107.63 112.05 110.67 111.78 105.49 101.89 100.00 101.96 108.24 112.08 112.34 109.50 107.04 101.96 100.00 101.96 106.95 114.00 115.73 117.91 108.24 101.96 100.00 101.96 108.24 106.97 109.81 109.07 108.24 101.96
+Classic/Right Stick/Up = `Axis 4-`
+Classic/Right Stick/Down = `Axis 4+`
+Classic/Right Stick/Left = `Axis 3-`
+Classic/Right Stick/Right = `Axis 3+`
+Classic/Right Stick/Modifier/Range = 50.
+Classic/Right Stick/Calibration = 100.00 101.96 107.60 112.29 113.04 111.78 108.24 101.96 100.00 101.96 108.24 109.67 111.62 109.71 104.61 101.96 100.00 101.96 108.12 116.15 116.97 117.85 107.67 101.96 100.00 101.96 108.24 107.11 107.45 110.21 108.24 101.96
+Classic/Triggers/L = `Trigger L`
+Classic/Triggers/R = `Trigger `
+Classic/Triggers/L-Analog = `Trigger L`
+Classic/Triggers/R-Analog = `Trigger `
+Guitar/Stick/Modifier/Range = 50.
+Drums/Stick/Modifier/Range = 50.
+Turntable/Stick/Modifier/Range = 50.
+uDraw/Stylus/Modifier/Range = 50.
+Drawsome/Stylus/Modifier/Range = 50.
+Rumble/Motor = Strong
+Options/Upright Wiimote = `Full Axis 2+`
+Nunchuk/Stick/Modifier = `Thumb L`
+Nunchuk/Tilt/Forward = @(`Thumb L`+`Right Y+`)
+Nunchuk/Tilt/Backward = @(`Thumb L`+`Right Y-`)
+Nunchuk/Tilt/Left = @(`Thumb L`+`Right X-`)
+Nunchuk/Tilt/Right = @(`Thumb L`+`Right X+`)
+Source = 1
+Drums/Stick/Up = `Hat 0 N`
+Drums/Stick/Down = `Hat 0 S`
+Drums/Stick/Left = `Hat 0 W`
+Drums/Stick/Right = `Hat 0 E`
+Drums/Pads/Red = `Button 10`&`Button 2`
+Drums/Pads/Yellow = `Button 3`
+Drums/Pads/Blue = `Button 0`&`Button 10`
+Drums/Pads/Orange = `Button 11`&`Button 1`
+Drums/Pads/Green = `Button 10`&`Button 1`
+Drums/Pads/Bass = `Button 4`
+Drums/Buttons/- = `Button 8`
+Drums/Buttons/+ = `Button 9`
+IR/Up = `DInput/0/Keyboard Mouse:Cursor Y-`
+IR/Down = `DInput/0/Keyboard Mouse:Cursor Y+`
+IR/Left = `DInput/0/Keyboard Mouse:Cursor X-`
+IR/Right = `DInput/0/Keyboard Mouse:Cursor X+`
