introducing SDL_ROCKBAND_DRUM_KIT to satisfy ghwtde

--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -236,6 +236,51 @@ Drums/Stick/Down = `Pad S`
 Drums/Stick/Left = `Pad W`
 Drums/Stick/Right = `Pad E`
 Buttons/Home = Guide
+[SDL_ROCKBAND_DRUM_KIT]
+Device = XInput/0/Drum Kit
+Buttons/A = `Button A`&`Thumb R`
+Buttons/B = `Button B`&`Thumb R`
+IR/Up = `Cursor Y-`
+IR/Down = `Cursor Y+`
+IR/Left = `Cursor X-`
+IR/Right = `Cursor X+`
+Tilt/Modifier/Range = 50.
+Shake/X = `Click 2`
+Shake/Y = `Click 2`
+Shake/Z = `Click 2`
+Extension = Drums
+Nunchuk/Buttons/C = LCONTROL
+Nunchuk/Buttons/Z = LSHIFT
+Nunchuk/Stick/Up = W
+Nunchuk/Stick/Down = S
+Nunchuk/Stick/Left = A
+Nunchuk/Stick/Right = D
+Nunchuk/Stick/Modifier/Range = 50.
+Nunchuk/Stick/Calibration = 100.00 141.42 100.00 141.42 100.00 141.42 100.00 141.42
+Nunchuk/Tilt/Modifier/Range = 50.
+Nunchuk/Shake/X = `Click 2`
+Nunchuk/Shake/Y = `Click 2`
+Nunchuk/Shake/Z = `Click 2`
+Classic/Left Stick/Modifier/Range = 50.
+Classic/Right Stick/Modifier/Range = 50.
+Guitar/Stick/Modifier/Range = 50.
+Turntable/Stick/Modifier/Range = 50.
+uDraw/Stylus/Modifier/Range = 50.
+Drawsome/Stylus/Modifier/Range = 50.
+Source = 1
+Drums/Pads/Red = `Button B`&`Thumb R`
+Drums/Pads/Yellow = `Button Y`&`Thumb R`
+Drums/Pads/Blue = `Button X`&`Thumb R`
+Drums/Pads/Orange = `Button A`&`Shoulder R`
+Drums/Pads/Bass = `Shoulder L`
+Drums/Pads/Green = `Button A`&`Thumb R`
+Drums/Buttons/- = Back
+Drums/Buttons/+ = Start
+Drums/Stick/Up = `Pad N`
+Drums/Stick/Down = `Pad S`
+Drums/Stick/Left = `Pad W`
+Drums/Stick/Right = `Pad E`
+Buttons/Home = Guide
 [WII_ROCKBAND_DRUM_KIT]
 Device = SDL/0/Harmonix Drum Controller for Nintendo Wii
 Buttons/A = `Button 10`&`Button 1`
