--- a/config-templates/ghwtde.ini
+++ b/config-templates/ghwtde.ini
@@ -69,81 +69,108 @@ RightThumbX=2
 RightThumbX_InvertAxis=0
 RightThumbY=3
 RightThumbY_InvertAxis=0
+[SDL_GUITAR]
+DeviceName=Guitar (Solderless Kit - Default (1.1))
+Type=Guitar
+Enabled=1
+Debug=0
+DebugPresses=0
+DebugAxes=0
+DPadUp=0
+DPadUp_Axis=2
+DPadUp_InvertAxis=0
+DPadUp_AxisThresh=1
+DPadDown=0
+DPadDown_Axis=2
+DPadDown_InvertAxis=0
+DPadDown_AxisThresh=4
+DPadLeft=0
+DPadLeft_Axis=2
+DPadLeft_InvertAxis=0
+DPadLeft_AxisThresh=8
+DPadRight=0
+DPadRight_Axis=2
+DPadRight_InvertAxis=0
+DPadRight_AxisThresh=2
+Start=6
+Start_Axis=0
+Start_InvertAxis=0
+Start_AxisThresh=1000
+Back=4
+Back_Axis=0
+Back_InvertAxis=0
+Back_AxisThresh=1000
+LeftThumb=-1
+LeftThumb_Axis=0
+LeftThumb_InvertAxis=0
+LeftThumb_AxisThresh=1000
+RightThumb=-1
+RightThumb_Axis=0
+RightThumb_InvertAxis=0
+RightThumb_AxisThresh=1000
+LeftShoulder=9
+LeftShoulder_Axis=0
+LeftShoulder_InvertAxis=0
+LeftShoulder_AxisThresh=1000
+RightShoulder=-1
+RightShoulder_Axis=0
+RightShoulder_InvertAxis=0
+RightShoulder_AxisThresh=1000
+A=0
+A_Axis=0
+A_InvertAxis=0
+A_AxisThresh=1000
+B=1
+B_Axis=0
+B_InvertAxis=0
+B_AxisThresh=1000
+X=2
+X_Axis=0
+X_InvertAxis=0
+X_AxisThresh=1000
+Y=3
+Y_Axis=0
+Y_InvertAxis=0
+Y_AxisThresh=1000
+LeftThumbX=-1
+LeftThumbX_InvertAxis=0
+LeftThumbY=-1
+LeftThumbY_InvertAxis=0
+RightThumbX=1
+RightThumbX_InvertAxis=0
+RightThumbY=0
+RightThumbY_InvertAxis=0
 [WII_ROCKBAND_DRUM_KIT]
 DeviceName=Harmonix Drum Controller for Nintendo Wii
 Type=RBDrums
 Enabled=1
-
 Debug=0
-
 DebugPresses=0
-
 DebugAxes=0
-
 DPadUp=0 
-
-
 DPadUp_Axis=2
-
-
 DPadUp_InvertAxis=0
-
-
 DPadUp_AxisThresh=1
-
-
 DPadDown=0
-
-
 DPadDown_Axis=2
-
-
 DPadDown_InvertAxis=0
-
-
 DPadDown_AxisThresh=4
-
-
 DPadLeft=0
-
-
 DPadLeft_Axis=2
-
-
 DPadLeft_InvertAxis=0
-
-
 DPadLeft_AxisThresh=8
-
-
 DPadRight=0
-
-
 DPadRight_Axis=2
-
-
 DPadRight_InvertAxis=0
-
-
 DPadRight_AxisThresh=2
-
-
 Start=9
-
 Start_Axis=0
-
 Start_InvertAxis=0
-
 Start_AxisThresh=1000
-
 Back=8
-
 Back_Axis=0
-
 Back_InvertAxis=0
-
 Back_AxisThresh=1000
-
 LeftThumb=-1
 LeftThumb_Axis=0
 LeftThumb_InvertAxis=0
@@ -153,49 +180,29 @@ RightThumb_Axis=0
 RightThumb_InvertAxis=0
 RightThumb_AxisThresh=1000
 LeftShoulder=4
-
 LeftShoulder_Axis=0
-
 LeftShoulder_InvertAxis=0
-
 LeftShoulder_AxisThresh=1000
-
 RightShoulder=-1
 RightShoulder_Axis=0
 RightShoulder_InvertAxis=0
 RightShoulder_AxisThresh=1000
 A=1
-
 A_Axis=0
-
 A_InvertAxis=0
-
 A_AxisThresh=1000
-
 B=2
-
 B_Axis=0
-
 B_InvertAxis=0
-
 B_AxisThresh=1000
-
 X=0
-
 X_Axis=0
-
 X_InvertAxis=0
-
 X_AxisThresh=1000
-
 Y=3
-
 Y_Axis=0
-
 Y_InvertAxis=0
-
 Y_AxisThresh=1000
-
 LeftThumbX=-1
 LeftThumbX_InvertAxis=0
 LeftThumbY=-1
@@ -208,13 +215,9 @@ RightThumbY_InvertAxis=0
 DeviceName=XInput Device 1 (0, 7)
 Type=RBDrums
 Enabled=1
-
 Debug=0
-
 DebugPresses=0
-
 DebugAxes=0
-
 DPadUp=0
 DPadUp_Axis=0
 DPadUp_InvertAxis=0
@@ -278,4 +281,75 @@ LeftThumbY_InvertAxis=0
 RightThumbX=2
 RightThumbX_InvertAxis=0
 RightThumbY=3
+RightThumbY_InvertAxis=0
+[SDL_ROCKBAND_DRUM_KIT]
+DeviceName=Drum Kit (Xbox 360 Wireless Receiver for Windows)
+Type=RBDrums
+Enabled=1
+Debug=0
+DebugPresses=0
+DebugAxes=0
+DPadUp=0
+DPadUp_Axis=2
+DPadUp_InvertAxis=0
+DPadUp_AxisThresh=1
+DPadDown=0
+DPadDown_Axis=2
+DPadDown_InvertAxis=0
+DPadDown_AxisThresh=4
+DPadLeft=0
+DPadLeft_Axis=2
+DPadLeft_InvertAxis=0
+DPadLeft_AxisThresh=8
+DPadRight=0
+DPadRight_Axis=2
+DPadRight_InvertAxis=0
+DPadRight_AxisThresh=2
+Start=6
+Start_Axis=0
+Start_InvertAxis=0
+Start_AxisThresh=1000
+Back=4
+Back_Axis=0
+Back_InvertAxis=0
+Back_AxisThresh=1000
+LeftThumb=-1
+LeftThumb_Axis=0
+LeftThumb_InvertAxis=0
+LeftThumb_AxisThresh=1000
+RightThumb=-1
+RightThumb_Axis=0
+RightThumb_InvertAxis=0
+RightThumb_AxisThresh=1000
+LeftShoulder=9
+LeftShoulder_Axis=0
+LeftShoulder_InvertAxis=0
+LeftShoulder_AxisThresh=1000
+RightShoulder=-1
+RightShoulder_Axis=0
+RightShoulder_InvertAxis=0
+RightShoulder_AxisThresh=1000
+A=0
+A_Axis=0
+A_InvertAxis=0
+A_AxisThresh=1000
+B=1
+B_Axis=0
+B_InvertAxis=0
+B_AxisThresh=1000
+X=2
+X_Axis=0
+X_InvertAxis=0
+X_AxisThresh=1000
+Y=3
+Y_Axis=0
+Y_InvertAxis=0
+Y_AxisThresh=1000
+LeftThumbX=-1
+LeftThumbX_InvertAxis=0
+LeftThumbY=-1
+LeftThumbY_InvertAxis=0
+RightThumbX=-1
+RightThumbX_InvertAxis=0
+RightThumbY=-1
 RightThumbY_InvertAxis=0
