--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "autojoy",
   "version": "1.8.2",
   "description": "Automatically update emulators and games input settings based on what's connected to your computer!",
-  "entry": "index.js",
+  "entry": "src/main/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
+    "start": "electron src/main/index.js",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "install": "node-gyp rebuild",
-    "postinstall": "electron-builder install-app-deps"
+    "install": "node-gyp rebuild"
   },
   "build": {
     "appId": "com.jhonnymichel.autojoy",
