--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "electron src/main/index.js",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "install": "node-gyp rebuild"
+    "install": "node-gyp rebuild",
+    "postinstall": "node scripts/copy-sdl.js"
   },
   "build": {
     "appId": "com.jhonnymichel.autojoy",
