--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -191,6 +191,109 @@ Guitar/Stick/Left=`Pad W`
 Guitar/Stick/Right=`Pad E`
 Buttons/A=`Button A`
 Buttons/B=`Button B`
+[PS3_GUITARHERO_GUITAR]
+Device = SDL/0/Guitar Controller P3
+Buttons/A = `Button 1`
+Buttons/B = `Button 2`
+Buttons/- = `Button 8`
+Buttons/+ = `Button 9`
+Buttons/Home = `Button 12`
+D-Pad/Left = `Hat 0 W`
+D-Pad/Right = `Hat 0 E`
+IR/Vertical Offset = 12.
+IR/Total Yaw = 19.
+IR/Total Pitch = 22.
+IR/Auto-Hide = True
+IR/Up = `Right Y+`
+IR/Down = `Right Y-`
+IR/Left = `Right X-`
+IR/Right = `Right X+`
+IR/Hide = `Thumb R`
+IR/Calibration = 100.00 101.96 108.24 112.67 116.44 114.62 108.11 101.96 100.00 101.96 108.11 113.10 115.81 113.90 108.24 101.96 100.00 101.96 108.24 114.93 115.13 115.19 108.24 101.96 100.00 101.96 108.13 112.88 112.20 110.97 108.24 101.96
+Shake/X = `Shoulder L`
+Shake/Y = `Shoulder L`
+Shake/Z = `Shoulder L`
+Tilt/Forward = @(`Thumb L`+`Right Y+`)
+Tilt/Backward = @(`Thumb L`+`Right Y-`)
+Tilt/Left = @(`Thumb L`+`Right X-`)
+Tilt/Right = @(`Thumb L`+`Right X+`)
+Tilt/Modifier/Range = 50.
+IMUIR/Enabled = False
+IMUAccelerometer/Up = `Accel Up`
+IMUAccelerometer/Down = `Accel Down`
+IMUAccelerometer/Left = `Accel Left`
+IMUAccelerometer/Right = `Accel Right`
+IMUAccelerometer/Forward = `Accel Forward`
+IMUAccelerometer/Backward = `Accel Backward`
+IMUGyroscope/Pitch Up = `Gyro Pitch Up`
+IMUGyroscope/Pitch Down = `Gyro Pitch Down`
+IMUGyroscope/Roll Left = `Gyro Roll Left`
+IMUGyroscope/Roll Right = `Gyro Roll Right`
+IMUGyroscope/Yaw Left = `Gyro Yaw Left`
+IMUGyroscope/Yaw Right = `Gyro Yaw Right`
+Hotkeys/Sideways Toggle = SELECT&THUMBR
+Extension = Guitar
+Nunchuk/Buttons/C = `Shoulder R`
+Nunchuk/Buttons/Z = `Trigger R`
+Nunchuk/Stick/Up = `Left Y+`
+Nunchuk/Stick/Down = `Left Y-`
+Nunchuk/Stick/Left = `Left X-`
+Nunchuk/Stick/Right = `Left X+`
+Nunchuk/Stick/Modifier = `Thumb L`
+Nunchuk/Stick/Modifier/Range = 50.
+Nunchuk/Stick/Calibration = 100.00 101.96 107.70 111.02 112.30 107.98 106.91 101.96 100.00 101.96 108.24 113.14 114.55 111.79 108.24 101.96 100.00 101.96 108.24 113.60 114.92 113.33 108.24 101.96 100.00 101.96 108.24 110.60 109.10 108.88 108.24 101.96
+Nunchuk/Shake/X = `Trigger L`
+Nunchuk/Shake/Y = `Trigger L`
+Nunchuk/Shake/Z = `Trigger L`
+Nunchuk/Tilt/Forward = @(`Thumb L`+`Right Y+`)
+Nunchuk/Tilt/Backward = @(`Thumb L`+`Right Y-`)
+Nunchuk/Tilt/Left = @(`Thumb L`+`Right X-`)
+Nunchuk/Tilt/Right = @(`Thumb L`+`Right X+`)
+Nunchuk/Tilt/Modifier/Range = 50.
+Classic/Buttons/A = `Button B`
+Classic/Buttons/B = `Button A`
+Classic/Buttons/X = `Button Y`
+Classic/Buttons/Y = `Button X`
+Classic/Buttons/ZL = `Shoulder L`
+Classic/Buttons/ZR = `Shoulder L`
+Classic/Buttons/- = SELECT
+Classic/Buttons/+ = START
+Classic/Left Stick/Up = `Left Y+`
+Classic/Left Stick/Down = `Left Y-`
+Classic/Left Stick/Left = `Left X-`
+Classic/Left Stick/Right = `Left X+`
+Classic/Left Stick/Modifier/Range = 50.
+Classic/Left Stick/Calibration = 100.00 101.96 107.63 112.05 110.67 111.78 105.49 101.89 100.00 101.96 108.24 112.08 112.34 109.50 107.04 101.96 100.00 101.96 106.95 114.00 115.73 117.91 108.24 101.96 100.00 101.96 108.24 106.97 109.81 109.07 108.24 101.96
+Classic/Right Stick/Up = `Axis 4-`
+Classic/Right Stick/Down = `Axis 4+`
+Classic/Right Stick/Left = `Axis 3-`
+Classic/Right Stick/Right = `Axis 3+`
+Classic/Right Stick/Modifier/Range = 50.
+Classic/Right Stick/Calibration = 100.00 101.96 107.60 112.29 113.04 111.78 108.24 101.96 100.00 101.96 108.24 109.67 111.62 109.71 104.61 101.96 100.00 101.96 108.12 116.15 116.97 117.85 107.67 101.96 100.00 101.96 108.24 107.11 107.45 110.21 108.24 101.96
+Classic/Triggers/L = `Trigger L`
+Classic/Triggers/R = `Trigger `
+Classic/Triggers/L-Analog = `Trigger L`
+Classic/Triggers/R-Analog = `Trigger `
+Guitar/Frets/Green = `Button 1`
+Guitar/Frets/Red = `Button 2`
+Guitar/Frets/Yellow = `Button 0`
+Guitar/Frets/Blue = `Button 3`
+Guitar/Frets/Orange = `Button 4`
+Guitar/Strum/Up = `Hat 0 N`
+Guitar/Strum/Down = `Hat 0 S`
+Guitar/Stick/Up = `Axis 1-`
+Guitar/Stick/Down = `Axis 1+`
+Guitar/Stick/Left = `Axis 0-`
+Guitar/Stick/Right = `Axis 0+`
+Guitar/Stick/Modifier = `Button 10`
+Guitar/Stick/Modifier/Range = 50.
+Guitar/Whammy/Bar = `Axis 2+`
+Drums/Stick/Modifier/Range = 50.
+Turntable/Stick/Modifier/Range = 50.
+uDraw/Stylus/Modifier/Range = 50.
+Drawsome/Stylus/Modifier/Range = 50.
+Rumble/Motor = Strong
+Options/Upright Wiimote = `Full Axis 2+`
 [ROCKBAND_DRUM_KIT]
 Device = XInput/0/Drum Kit
 Buttons/A = `Button A`&`Thumb R`
