support for CRKD guitar on PC mode (RPCS3 and Dolphin)

--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -294,6 +294,54 @@ uDraw/Stylus/Modifier/Range = 50.
 Drawsome/Stylus/Modifier/Range = 50.
 Rumble/Motor = Strong
 Options/Upright Wiimote = `Full Axis 2+`
+[CRKD_GUITAR_PC_MODE]
+Device = SDL/0/Xbox 360 Controller
+IR/Up = `Cursor Y-`
+IR/Down = `Cursor Y+`
+IR/Left = `Cursor X-`
+IR/Right = `Cursor X+`
+Tilt/Modifier/Range = 50.
+Shake/X = `Click 2`
+Shake/Y = `Click 2`
+Shake/Z = `Click 2`
+Extension = Guitar
+Nunchuk/Buttons/C = LCONTROL
+Nunchuk/Buttons/Z = LSHIFT
+Nunchuk/Stick/Up = W
+Nunchuk/Stick/Down = S
+Nunchuk/Stick/Left = A
+Nunchuk/Stick/Right = D
+Nunchuk/Stick/Modifier/Range = 50.
+Nunchuk/Stick/Calibration = 100.00 141.42 100.00 141.42 100.00 141.42 100.00 141.42
+Nunchuk/Tilt/Modifier/Range = 50.
+Nunchuk/Shake/X = `Click 2`
+Nunchuk/Shake/Y = `Click 2`
+Nunchuk/Shake/Z = `Click 2`
+Classic/Left Stick/Modifier/Range = 50.
+Classic/Right Stick/Modifier/Range = 50.
+Guitar/Stick/Modifier/Range = 50.
+Drums/Stick/Modifier/Range = 50.
+Turntable/Stick/Modifier/Range = 50.
+uDraw/Stylus/Modifier/Range = 50.
+Drawsome/Stylus/Modifier/Range = 50.
+Source = 1
+Swing/Dead Zone = 40.
+Guitar/Frets/Green = `Button A`
+Guitar/Frets/Red = `Button B`
+Guitar/Frets/Yellow = `Button Y`
+Guitar/Frets/Blue = `Button X`
+Guitar/Frets/Orange = `Shoulder L`
+Guitar/Strum/Up = `Pad N`
+Guitar/Strum/Down = `Pad S`
+Guitar/Buttons/- = Back
+Guitar/Buttons/+ = Start
+Guitar/Stick/Up = `Pad N`
+Guitar/Whammy/Bar = `Trigger L`
+Guitar/Stick/Down = `Pad S`
+Guitar/Stick/Left = `Pad W`
+Guitar/Stick/Right = `Pad E`
+Buttons/A = `Button A`
+Buttons/B = `Button B`
 [ROCKBAND_DRUM_KIT]
 Device = XInput/0/Drum Kit
 Buttons/A = `Button A`&`Thumb R`
