GHWTDE CRKD guitar on PC mode

--- a/config-templates/ghwtde.ini
+++ b/config-templates/ghwtde.ini
@@ -211,6 +211,77 @@ RightThumbX=2
 RightThumbX_InvertAxis=0
 RightThumbY=-2
 RightThumbY_InvertAxis=0
+[CRKD_GUITAR_PC_MODE]
+DeviceName=CRKD Guitar (PC Mode)
+Type=Guitar
+Enabled=0
+Debug=0
+DebugPresses=0
+DebugAxes=0
+DPadUp=0
+DPadUp_Axis=2
+DPadUp_InvertAxis=0
+DPadUp_AxisThresh=1
+DPadDown=0
+DPadDown_Axis=2
+DPadDown_InvertAxis=0
+DPadDown_AxisThresh=4
+DPadLeft=0
+DPadLeft_Axis=2
+DPadLeft_InvertAxis=0
+DPadLeft_AxisThresh=8
+DPadRight=0
+DPadRight_Axis=2
+DPadRight_InvertAxis=0
+DPadRight_AxisThresh=2
+Start=6
+Start_Axis=0
+Start_InvertAxis=0
+Start_AxisThresh=1000
+Back=4
+Back_Axis=0
+Back_InvertAxis=0
+Back_AxisThresh=1000
+LeftThumb=-2
+LeftThumb_Axis=0
+LeftThumb_InvertAxis=0
+LeftThumb_AxisThresh=1000
+RightThumb=-2
+RightThumb_Axis=0
+RightThumb_InvertAxis=0
+RightThumb_AxisThresh=1000
+LeftShoulder=9
+LeftShoulder_Axis=0
+LeftShoulder_InvertAxis=0
+LeftShoulder_AxisThresh=1000
+RightShoulder=-2
+RightShoulder_Axis=0
+RightShoulder_InvertAxis=0
+RightShoulder_AxisThresh=1000
+A=0
+A_Axis=0
+A_InvertAxis=0
+A_AxisThresh=1000
+B=1
+B_Axis=0
+B_InvertAxis=0
+B_AxisThresh=1000
+X=2
+X_Axis=0
+X_InvertAxis=0
+X_AxisThresh=1000
+Y=3
+Y_Axis=0
+Y_InvertAxis=0
+Y_AxisThresh=1000
+LeftThumbX=-2
+LeftThumbX_InvertAxis=0
+LeftThumbY=-2
+LeftThumbY_InvertAxis=0
+RightThumbX=4
+RightThumbX_InvertAxis=0
+RightThumbY=-2
+RightThumbY_InvertAxis=0
 [WII_ROCKBAND_DRUM_KIT]
 DeviceName=Harmonix Drum Controller for Nintendo Wii
 Type=RBDrums
