--- a/config-templates/ghwtde.ini
+++ b/config-templates/ghwtde.ini
@@ -1,75 +1,4 @@
-[GUITAR]
-DeviceName=XInput Device 1 (0, 7)
-Type=Guitar
-Enabled=1
-Debug=0
-DebugPresses=0
-DebugAxes=0
-DPadUp=0
-DPadUp_Axis=0
-DPadUp_InvertAxis=0
-DPadUp_AxisThresh=1000
-DPadDown=1
-DPadDown_Axis=0
-DPadDown_InvertAxis=0
-DPadDown_AxisThresh=1000
-DPadLeft=2
-DPadLeft_Axis=0
-DPadLeft_InvertAxis=0
-DPadLeft_AxisThresh=1000
-DPadRight=3
-DPadRight_Axis=0
-DPadRight_InvertAxis=0
-DPadRight_AxisThresh=1000
-Start=4
-Start_Axis=0
-Start_InvertAxis=0
-Start_AxisThresh=1000
-Back=5
-Back_Axis=0
-Back_InvertAxis=0
-Back_AxisThresh=1000
-LeftThumb=6
-LeftThumb_Axis=0
-LeftThumb_InvertAxis=0
-LeftThumb_AxisThresh=1000
-RightThumb=7
-RightThumb_Axis=0
-RightThumb_InvertAxis=0
-RightThumb_AxisThresh=1000
-LeftShoulder=8
-LeftShoulder_Axis=0
-LeftShoulder_InvertAxis=0
-LeftShoulder_AxisThresh=1000
-RightShoulder=9
-RightShoulder_Axis=0
-RightShoulder_InvertAxis=0
-RightShoulder_AxisThresh=1000
-A=10
-A_Axis=0
-A_InvertAxis=0
-A_AxisThresh=1000
-B=11
-B_Axis=0
-B_InvertAxis=0
-B_AxisThresh=1000
-X=12
-X_Axis=0
-X_InvertAxis=0
-X_AxisThresh=1000
-Y=13
-Y_Axis=0
-Y_InvertAxis=0
-Y_AxisThresh=1000
-LeftThumbX=0
-LeftThumbX_InvertAxis=0
-LeftThumbY=1
-LeftThumbY_InvertAxis=0
-RightThumbX=2
-RightThumbX_InvertAxis=0
-RightThumbY=3
-RightThumbY_InvertAxis=0
-[SDL_GUITAR]
+[XINPUT_GUITAR]
 DeviceName=Guitar (Solderless Kit - Default (1.1))
 Type=Guitar
 Enabled=1
@@ -282,7 +211,7 @@ RightThumbX=4
 RightThumbX_InvertAxis=0
 RightThumbY=-2
 RightThumbY_InvertAxis=0
-[WII_ROCKBAND_DRUM_KIT]
+[WII_PS3_ROCKBAND_DRUM_KIT]
 DeviceName=Harmonix Drum Controller for Nintendo Wii
 Type=RBDrums
 Enabled=1
@@ -353,78 +282,7 @@ RightThumbX=-1
 RightThumbX_InvertAxis=0
 RightThumbY=-1
 RightThumbY_InvertAxis=0
-[ROCKBAND_DRUM_KIT]
-DeviceName=XInput Device 1 (0, 7)
-Type=RBDrums
-Enabled=1
-Debug=0
-DebugPresses=0
-DebugAxes=0
-DPadUp=0
-DPadUp_Axis=0
-DPadUp_InvertAxis=0
-DPadUp_AxisThresh=1000
-DPadDown=1
-DPadDown_Axis=0
-DPadDown_InvertAxis=0
-DPadDown_AxisThresh=1000
-DPadLeft=2
-DPadLeft_Axis=0
-DPadLeft_InvertAxis=0
-DPadLeft_AxisThresh=1000
-DPadRight=3
-DPadRight_Axis=0
-DPadRight_InvertAxis=0
-DPadRight_AxisThresh=1000
-Start=4
-Start_Axis=0
-Start_InvertAxis=0
-Start_AxisThresh=1000
-Back=5
-Back_Axis=0
-Back_InvertAxis=0
-Back_AxisThresh=1000
-LeftThumb=6
-LeftThumb_Axis=0
-LeftThumb_InvertAxis=0
-LeftThumb_AxisThresh=1000
-RightThumb=7
-RightThumb_Axis=0
-RightThumb_InvertAxis=0
-RightThumb_AxisThresh=1000
-LeftShoulder=8
-LeftShoulder_Axis=0
-LeftShoulder_InvertAxis=0
-LeftShoulder_AxisThresh=1000
-RightShoulder=9
-RightShoulder_Axis=0
-RightShoulder_InvertAxis=0
-RightShoulder_AxisThresh=1000
-A=10
-A_Axis=0
-A_InvertAxis=0
-A_AxisThresh=1000
-B=11
-B_Axis=0
-B_InvertAxis=0
-B_AxisThresh=1000
-X=12
-X_Axis=0
-X_InvertAxis=0
-X_AxisThresh=1000
-Y=13
-Y_Axis=0
-Y_InvertAxis=0
-Y_AxisThresh=1000
-LeftThumbX=0
-LeftThumbX_InvertAxis=0
-LeftThumbY=1
-LeftThumbY_InvertAxis=0
-RightThumbX=2
-RightThumbX_InvertAxis=0
-RightThumbY=3
-RightThumbY_InvertAxis=0
-[SDL_ROCKBAND_DRUM_KIT]
+[XINPUT_ROCKBAND_DRUM_KIT]
 DeviceName=Drum Kit (Xbox 360 Wireless Receiver for Windows)
 Type=RBDrums
 Enabled=1
