updating toggle setting wiimote

--- a/config-templates/dolphin-wiimote-emulated.ini
+++ b/config-templates/dolphin-wiimote-emulated.ini
@@ -86,7 +86,7 @@ D-Pad/Down = `Pad S`
 D-Pad/Left = `Pad W`
 D-Pad/Right = `Pad E`
 Options/Upright Wiimote = `Full Axis 2+`
-Hotkeys/Sideways Toggle = SELECT&THUMBR
+Hotkeys/Sideways Toggle =  @(Back+`Thumb R`)
 Nunchuk/Stick/Modifier = `Thumb L`
 Nunchuk/Tilt/Forward = @(`Thumb L`+`Right Y+`)
 Nunchuk/Tilt/Backward = @(`Thumb L`+`Right Y-`)
