--- a/config-templates/ghwtde.ini
+++ b/config-templates/ghwtde.ini
@@ -353,3 +353,74 @@ RightThumbX=-1
 RightThumbX_InvertAxis=0
 RightThumbY=-1
 RightThumbY_InvertAxis=0
+[Empty]
+DeviceName=XInput Device 1
+Type=Guitar
+Enabled=1
+Debug=0
+DebugPresses=0
+DebugAxes=0
+DPadUp=-2
+DPadUp_Axis=0
+DPadUp_InvertAxis=0
+DPadUp_AxisThresh=1000
+DPadDown=-2
+DPadDown_Axis=0
+DPadDown_InvertAxis=0
+DPadDown_AxisThresh=1000
+DPadLeft=-2
+DPadLeft_Axis=0
+DPadLeft_InvertAxis=0
+DPadLeft_AxisThresh=1000
+DPadRight=-2
+DPadRight_Axis=0
+DPadRight_InvertAxis=0
+DPadRight_AxisThresh=1000
+Start=-2
+Start_Axis=0
+Start_InvertAxis=0
+Start_AxisThresh=1000
+Back=-2
+Back_Axis=0
+Back_InvertAxis=0
+Back_AxisThresh=1000
+LeftThumb=-2
+LeftThumb_Axis=0
+LeftThumb_InvertAxis=0
+LeftThumb_AxisThresh=1000
+RightThumb=-2
+RightThumb_Axis=0
+RightThumb_InvertAxis=0
+RightThumb_AxisThresh=1000
+LeftShoulder=-2
+LeftShoulder_Axis=0
+LeftShoulder_InvertAxis=0
+LeftShoulder_AxisThresh=1000
+RightShoulder=-2
+RightShoulder_Axis=0
+RightShoulder_InvertAxis=0
+RightShoulder_AxisThresh=1000
+A=-2
+A_Axis=0
+A_InvertAxis=0
+A_AxisThresh=1000
+B=-2
+B_Axis=0
+B_InvertAxis=0
+B_AxisThresh=1000
+X=-2
+X_Axis=0
+X_InvertAxis=0
+X_AxisThresh=1000
+Y=-2
+Y_Axis=0
+Y_InvertAxis=0
+Y_AxisThresh=1000
+LeftThumbX=-2
+LeftThumbX_InvertAxis=0
+LeftThumbY=-2
+LeftThumbY_InvertAxis=0
+RightThumbX=-2
+RightThumbX_InvertAxis=0
+RightThumbY=-2
+RightThumbY_InvertAxis=0
