--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "electron src/main/index.js",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "install": "node-gyp rebuild"
+    "install": "node-gyp rebuild",
+    "postinstall": "cp node_modules/petite-vue/dist/petite-vue.iife.js src/main/pages/petite-vue.iife.js"
   },
   "build": {
     "appId": "com.jhonnymichel.autojoy",
