preparing for VUE3 and bundling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,13 @@
     "source.fixAll.eslint": "explicit"
   },
   "editor.formatOnSave": true,
+  "[javascript]": {
+    "editor.tabSize": 2
+  },
+  "[javascriptreact]": {
+    "editor.tabSize": 2
+  },
+  "[mjs]": {
+    "editor.tabSize": 2
+  }
 }
