--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,11 @@
   },
   "[mjs]": {
     "editor.tabSize": 2
-  }
+  },
+   "[vue]": {
+    "editor.tabSize": 2
+  },
+   "[typescript]": {
+    "editor.tabSize": 2
+  },
 }
